--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
     "@mui/styled-engine-sc": "^6.4.3",
+    "@react-google-maps/api": "^2.20.6",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
-    "postcss-loader": "^8.1.1",
     "next": "15.1.7",
+    "postcss-loader": "^8.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
